Fixup styling and links

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,11 +2,9 @@
 
   <div class="wrapper">
 
-    <h2 class="footer-heading">{{ site.title }}</h2>
+
 
     <div class="footer-col-wrapper">
-      <div class="footer-col footer-col-1">
-      </div>
 
       <div class="footer-col footer-col-2">
         <ul class="social-media-list">
@@ -27,6 +25,11 @@
       <div class="footer-col footer-col-3">
         <p>{{ site.description }}</p>
       </div>
+
+      <div class="footer-col footer-col-2">
+        <p class="rss-subscribe">subscribe <a href="{{ "/feed.xml" | prepend: site.github.url }}">via RSS</a></p>
+      </div>
+
     </div>
 
   </div>
