--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -27,7 +27,11 @@
       </div>
 
       <div class="footer-col footer-col-2">
-        <p class="rss-subscribe">subscribe <a href="{{ "/feed.xml" | prepend: site.github.url }}">via RSS</a></p>
+        <p class="rss-subscribe">
+          <a href="https://creativecommons.org/publicdomain/zero/1.0/"><img src="https://camo.githubusercontent.com/da896acd40e1f4f275c2da6e1d830b2865803fc8/68747470733a2f2f692e6372656174697665636f6d6d6f6e732e6f72672f702f7a65726f2f312e302f38387833312e706e67" alt="CC0" data-canonical-src="https://i.creativecommons.org/p/zero/1.0/88x31.png" style="max-width:100%;"></a>
+          <br/><a href="{{ "/feed.xml" | prepend: site.github.url }}">RSS</a>
+        </p>
+
       </div>
 
     </div>
